--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Hello!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+<html>
+    <head>
+      <TITLE> A </TITLE>
+  </head>
+  <body>
+  </body>
+</html>
+        
